@@ -6,7 +6,7 @@ import org.junit.runners.Suite.SuiteClasses;
 
 @RunWith(Suite.class)
 @SuiteClasses( { InterpretedEngineTest.class, 
-//	CompiledEngineTest.class,
+	CompiledEngineTest.class,
 		MiniParserTest.class })
 public class AllTests {
 
